[package]
name = "unite"
version = "0.1.2"
edition = "2018"
authors = ["Zerthox <zerthox@gmail.com>"]
description = "A helper macro to compose existing types into an enum"
repository = "https://github.com/zerthox/unite"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
quote = "1.0"
syn = "1.0"
